--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,35 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/root_content"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:minHeight="?attr/actionBarSize"
+        android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:minHeight="?attr/actionBarSize"
         app:layout_scrollFlags="scroll|enterAlways"
-        app:theme="@style/ToolBarTheme"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        android:elevation="4dp"/>
+        app:theme="@style/ToolBarTheme" />
 
     <TextView
         android:id="@+id/permission_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/usage_permission_explanation"
-        />
+        android:visibility="gone" />
+
     <Button
         android:id="@+id/usage_permission"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:text="@string/button_usage_permission"
-        />
+        android:visibility="gone" />
     <!-- Main layout -->
     <FrameLayout
         android:id="@+id/main_fragment_container"
